--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MVVMAndroidProject</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="server_load_error">Can\'t load events</string>
+    <string name="server_load_success">Events loaded</string>
 </resources>
