--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MVVMAndroidProject</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="img_description">Image</string>
     <string name="server_load_error">Can\'t load news</string>
     <string name="server_load_success">News loaded</string>
 </resources>
