--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="server_load_error">Can\'t load news</string>
     <string name="server_load_success">News loaded</string>
+    <string name="image">image</string>
 </resources>
