--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="img_description">Image</string>
     <string name="server_load_error">Can\'t load news</string>
     <string name="server_load_success">News loaded</string>
+    <string name="transaction_img_news">TRANSACTION_IMG_NEWS</string>
 </resources>
